--- a/web/css/main.css
+++ b/web/css/main.css
@@ -34,9 +34,11 @@ input[type="submit"]{
     color: rgba(102,165,165,1);
     font-weight: 700;
     background-color: rgb(250,250,250);
-    transition-duration: 0.5s;
+    transition-duration: 1s;
 }
 input[type="submit"]:hover{
+    border: solid 0.5px grey;
+    color: rgb(250,250,250);
     background-color: rgba(102,165,165,0.1);
 }
 .container {
