--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7,12 +7,22 @@ and open the template in the editor.
     Created on : 13/02/2018, 07:25:22 PM
     Author     : Fabian
 */
+
 *{
     box-sizing: border-box;
+    box-sizing: content-box;
 }
-body{
+body,h1{
     margin: 0;
     padding: 0;
+}
+h1{
+    margin-top: 1em;
+}
+h1,th{
+    color : rgb(255,191,61);
+}
+body{
     font-size: 100%;
 }
 label{
@@ -28,27 +38,32 @@ input[type="text"],input[type="number"]{
     color: rgba(102,165,165,1);
     font-weight: 900;
 }
+input[type="text"]:focus,input[type="number"]:focus{
+    outline: 0px;
+}
 input[type="submit"]{
     border: none;
-    padding: 0.9em;
-    color: rgba(102,165,165,1);
+    border-bottom: solid 1px white;
+    padding: 0.9em 0 0.9em 0;
+    color: rgba(250,250,250,1);
     font-weight: 700;
-    background-color: rgb(250,250,250);
-    transition-duration: 1s;
+    background-color: rgba(102,165,165,0.7);
+    transition-duration: 0.7s;
 }
 input[type="submit"]:hover{
-    border: solid 0.5px grey;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
     color: rgb(250,250,250);
-    background-color: rgba(102,165,165,0.1);
+    background-color: rgba(250,250,250,0.1);
 }
 .container {
     display: grid;
     grid-template-columns : 1fr;
+    grid-template-rows : 1fr 1fr;
 }
 .container-form{
     display: flex;
     justify-content: center;
-    margin: 2em;
     padding: 2em 0 2em 0;
     background-color: rgba(102,165,165,0.7);
 }
@@ -60,8 +75,30 @@ input[type="submit"]:hover{
 }
 
 .form-control {
-    display: grid;
-    grid-template-columns : 1fr;
-    grid-row-gap : 0.5em;
-    margin-top : 1.5em; 
+    display: flex;
+    flex-direction: column;
+}
+
+.container-table{
+    display: flex;
+    flex-direction: column; 
+    align-items:  center;
+    background-color: rgba(184,218,218,0.9);
+}
+table{
+    margin-top: 3em;
+    border-spacing: 0;
+}
+th,td{
+    padding: 1em;
+    text-align: center;
+}
+tr:hover{
+    background-color: rgba(0,96,96,0.3);
+}
+td{
+        border-bottom: solid 0.1px rgba(0,0,0,0.9);
+}
+th{
+    background-color: rgb(0,96,96);
 }
