--- a/web/css/main.css
+++ b/web/css/main.css
@@ -58,14 +58,16 @@ input[type="submit"]:hover{
 }
 .container {
     display: grid;
-    grid-template-columns : 1fr;
+    grid-template-columns : 100%;
     grid-template-rows : 1fr 1fr;
+    transition-duration: 1s;
 }
 .container-form{
     display: flex;
     justify-content: center;
     padding: 2em 0 2em 0;
     background-color: rgba(102,165,165,0.7);
+    transition-duration: 1s;
 }
 
 .form-item{
@@ -84,6 +86,7 @@ input[type="submit"]:hover{
     flex-direction: column; 
     align-items:  center;
     background-color: rgba(184,218,218,0.9);
+    transition-duration: 1s;
 }
 table{
     margin-bottom: 3em;
@@ -102,4 +105,28 @@ td{
 }
 th{
     background-color: rgb(0,96,96);
+}
+
+@media screen and (min-width: 900px){
+    .container-table{
+        background-color: white;
+    }
+    .container-form{
+        margin: 3em 10em; 
+    }
+}
+@media screen and (min-width: 1650px){
+    .container{
+        min-height: 100vh;
+        grid-template-columns : 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    .container-form{
+        margin: 0;
+        
+    }
+    .container-table{
+        background-color: rgba(184,218,218,0.9);
+    }
+
 }
